# G-Rust

./: .gitignore  Cargo.toml  README.md
examples/basic-extension/: Cargo.toml
examples/basic-extension/src/: main.rs
examples/chat-logger/: Cargo.toml
examples/chat-logger/src/: main.rs
examples/clear-wired-selection/: Cargo.toml
examples/clear-wired-selection/src/: main.rs
packetvar-derive/: Cargo.toml
packetvar-derive/src/: lib.rs
parser-derive/: Cargo.toml
parser-derive/src/: lib.rs
src/: lib.rs
src/extension/: extension.rs  mod.rs
src/extension/parsers/: baseparser.rs  hcatalog.rs  hentity.rs  hfriend.rs  hpoint.rs  hwallitem.rs  incoming.rs  mod.rs  outgoing.rs  stuffdata.rs  subparsers.rs
src/misc/: connection.rs  connectioninfo.rs  consoleformat.rs  hclient.rs  hostinfo.rs  intercept.rs  messages.rs  mod.rs
src/protocol/: hdirection.rs  hmessage.rs  hotel.rs  hpacket.rs  mod.rs
src/protocol/vars/: legacy.rs  longstring.rs  mod.rs  packetvariable.rs
src/services/: mod.rs
src/services/packetinfo/: mod.rs  packetinfo.rs  packetinfomanager.rs
tests/: tests.rs
tests/extension/: extension.rs  mod.rs
tests/extension/parsers/: mod.rs  outgoing.rs
tests/protocol/: hpacket.rs  mod.rs
