[workspace]
members = ["packetvar-derive", "parser-derive"]

[package]
name = "g-rust"
version = "0.0.1-beta.1"
edition = "2021"
authors = ["WiredSpast"]
description = "A Rust framework for G-Earth extensions"

[dependencies]
once_cell = "1.16.0"
encoding = "0.2.33"
miniz_oxide = "0.7.1"
packetvar-derive = { path = "packetvar-derive" }
parser-derive = { path = "parser-derive" }