[package]
name = "parser-derive"
version = "0.1.0"
edition = "2021"
authors = ["WiredSpast"]
description = "A Rust framework for G-Earth extensions"
license = "MIT"
repository = "https://github.com/WiredSpast/G-Rust/"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
darling = "0.14.4"
